# Doppelganger_TORIDE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_MeshFix.sh  vcpkg.json  x64-osx-supported-release.cmake
.github/workflows/: build-Linux.yml  build-macOS.yml  build-windows.yml  build.yml
loadPolygonMesh/: CMakeLists.txt
plugins/: CMakeLists.txt  pluginCommon.h  pluginList_Basic.json  pluginList_Core.json  pluginList_Dev.json  pluginList_Essential.json  pluginList_Essential_Web.json  pluginList_Print.json  pluginList_TORIDE.json
plugins/Basic/: CMakeLists.txt
plugins/Basic/alignCamera/: CMakeLists.txt  module.js
plugins/Basic/allMeshesInfo/: CMakeLists.txt  module.js
plugins/Basic/crossSectionalView/: CMakeLists.txt  module.js
plugins/Basic/fitToFrame/: CMakeLists.txt  module.js
plugins/Basic/loadPolygonMesh/: CMakeLists.txt  loadPolygonMesh.cpp  module.js
plugins/Basic/loadTexture/: CMakeLists.txt  loadTexture.cpp  module.js
plugins/Basic/meshErrorInfo/: CMakeLists.txt  meshErrorInfo.cpp  module.js
plugins/Basic/meshInfo/: CMakeLists.txt  module.js
plugins/Basic/outlineOnClick/: CMakeLists.txt  module.js
plugins/Basic/pullCanvasParameters/: CMakeLists.txt
plugins/Basic/redo/: CMakeLists.txt  module.js  redo.cpp
plugins/Basic/removeAllMeshes/: CMakeLists.txt  module.js  removeAllMeshes.cpp
plugins/Basic/removeMesh/: CMakeLists.txt  module.js  removeMesh.cpp
plugins/Basic/saveAllMeshes/: CMakeLists.txt  module.js  saveAllMeshes.cpp
plugins/Basic/saveMesh/: CMakeLists.txt  module.js  saveMesh.cpp
plugins/Basic/saveScreenshot/: CMakeLists.txt  convertImage.cpp  convertImage.h  module.js  saveScreenshot.cpp
plugins/Basic/saveScreenshotAll/: CMakeLists.txt  convertImage.cpp  convertImage.h  module.js  saveScreenshotAll.cpp
plugins/Basic/syncCursor/: CMakeLists.txt  module.js  syncCursor.cpp
plugins/Basic/syncViewport/: CMakeLists.txt  module.js  syncViewport.cpp
plugins/Basic/toggleAxesVisibility/: CMakeLists.txt  module.js
plugins/Basic/toggleMeshVisibility/: CMakeLists.txt  module.js  toggleMeshVisibility.cpp
plugins/Basic/transformGizmo/: CMakeLists.txt  module.js  transformGizmo.cpp
plugins/Basic/undo/: CMakeLists.txt  module.js  undo.cpp
plugins/Core/: CMakeLists.txt
plugins/Core/alignCamera/: CMakeLists.txt  module.js
plugins/Core/allMeshesInfo/: CMakeLists.txt
plugins/Core/configEditor/: CMakeLists.txt  configEditor.cpp  module.js
plugins/Core/crossSectionalView/: CMakeLists.txt  module.js
plugins/Core/fitToFrame/: CMakeLists.txt  module.js
plugins/Core/listPlugins/: CMakeLists.txt  listPlugins.cpp  module.js
plugins/Core/loadPolygonMesh/: CMakeLists.txt  module.js
plugins/Core/loadTexture/: CMakeLists.txt  loadTexture.cpp  module.js
plugins/Core/meshErrorInfo/: CMakeLists.txt  module.js
plugins/Core/meshInfo/: CMakeLists.txt
plugins/Core/outlineOnClick/: CMakeLists.txt
plugins/Core/pullCanvasParameters/: CMakeLists.txt
plugins/Core/pullCurrentMeshes/: CMakeLists.txt  pullCurrentMeshes.cpp
plugins/Core/pushCanvasParameters/: CMakeLists.txt  pushCanvasParameters.cpp
plugins/Core/redo/: CMakeLists.txt  module.js  redo.cpp
plugins/Core/removeAllMeshes/: CMakeLists.txt
plugins/Core/removeMesh/: CMakeLists.txt  module.js
plugins/Core/saveAllMeshes/: CMakeLists.txt  saveAllMeshes.cpp
plugins/Core/saveMesh/: CMakeLists.txt  saveMesh.cpp
plugins/Core/saveScreenshot/: CMakeLists.txt  saveScreenshot.cpp
plugins/Core/saveScreenshotAll/: CMakeLists.txt  module.js
plugins/Core/shutdown/: CMakeLists.txt  module.js
plugins/Core/sortMeshes/: CMakeLists.txt  module.js
plugins/Core/syncCursor/: CMakeLists.txt
plugins/Core/toggleAxesVisibility/: CMakeLists.txt
plugins/Core/toggleMeshVisibility/: CMakeLists.txt  toggleMeshVisibility.cpp
plugins/Core/undo/: CMakeLists.txt  undo.cpp
plugins/Core/updatePlugins/: CMakeLists.txt  updatePlugins.cpp
plugins/Essential/: CMakeLists.txt
plugins/Essential/assets/: CMakeLists.txt
plugins/Essential/assets/css/: Doppelganger.css
plugins/Essential/assets/html/: index.html
plugins/Essential/assets/icon/: cursorIcon.ai
plugins/Essential/assets/js/: Canvas.js  Core.js  Modal.js  MouseKey.js  Plugin.js  Text.js  UI.js  WS.js  WSTasks.js  constructMeshFrom.js  constructMeshLiFrom.js  request.js
plugins/Essential/assets/js/ThreeOrbitControlsGizmo/: OrbitControls.js  OrbitControlsGizmo.js
plugins/Essential/configEditor/: CMakeLists.txt  configEditor.cpp  module.js
plugins/Essential/info/: CMakeLists.txt  module.js
plugins/Essential/listPlugins/: CMakeLists.txt  listPlugins.cpp  module.js
plugins/Essential/pullCanvasParameters/: CMakeLists.txt  pullCanvasParameters.cpp
plugins/Essential/pullCurrentMeshes/: CMakeLists.txt  pullCurrentMeshes.cpp
plugins/Essential/pushCanvasParameters/: CMakeLists.txt  pushCanvasParameters.cpp
plugins/Essential/shutdown/: CMakeLists.txt  module.js  shutdown.cpp
plugins/Essential/sortMeshes/: CMakeLists.txt
plugins/Essential/syncCursor/: CMakeLists.txt  syncCursor.cpp
plugins/Essential/updatePlugins/: CMakeLists.txt  updatePlugins.cpp
plugins/Print/: CMakeLists.txt
plugins/Print/estimateThickness/: CMakeLists.txt  estimateThickness.cpp  module.js
plugins/Print/hollowMesh/: CMakeLists.txt  hollowMesh.cpp  module.js
plugins/Print/loadCADData/: CMakeLists.txt  FreeCADConfig.json  module.js
plugins/Print/repairAllMeshes/: CMakeLists.txt  module.js  repairAllMeshes.cpp
plugins/Print/repairMesh/: .gitignore  CMakeLists.txt  module.js  repairMesh.cpp
plugins/TORIDE/: CMakeLists.txt
plugins/TORIDE/estimateThickness/: CMakeLists.txt  estimateThickness.cpp
plugins/TORIDE/hollowMesh/: CMakeLists.txt  hollowMesh.cpp
plugins/TORIDE/loadCADData/: CMakeLists.txt  FreeCADConvert.py  loadCADData.cpp
plugins/TORIDE/repairAllMeshes/: .gitignore  CMakeLists.txt  repairAllMeshes.cpp
plugins/TORIDE/repairMesh/: CMakeLists.txt  MeshFix  module.js  repairMesh.cpp
plugins/TORIDE/splitIntoIslands/: CMakeLists.txt  module.js  splitIntoIslands.cpp
(+6 files in other folders)
